--- a/docker/files/docker-compose(mod).yml
+++ b/docker/files/docker-compose(mod).yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
 
-  # Модифицируем этот сервис
+  # Модифицируем этот сервис (можно просто скопировать с докерхаба)
   db:
     # image: mysql - просто меняем на mysql значение характеристики image
     image: mysql
@@ -20,11 +20,11 @@ services:
     environment:
       - PMA_ARBITRARY=1
 
-  # Добавим новый сервис
+  # Добавим новый сервис, используем уже готовый Dockerfile для того чтобы подключить в сервис образ из него со всеми настройками
   php:
     build: ./php  # указываем папку где находится наш докерфаил и команду build: для него(те этот сервис в отдельном докерфаиле)
     ports:
-      - 8081:80   # укажем другой порт локального сервера(8081 вместо 8080) чтобы не было конфликтов, теперь по этому локалхосту у нас пхп фаил
+      - 8081:80   # укажем другой порт локального сервера(8081 вместо 8080) чтобы не было конфликтов с phpmyadmin, теперь по этому локалхосту у нас будет пхп фаил
 
 
 
