--- a/docker/files/docker-compose.yml
+++ b/docker/files/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.1'
 
-# services - все образы/сервисы которые будут подключены
+# services - все сервисы с образами и настройками, которые будут подключены
 services:
-  # db:  - названиt конкретного образа/сервисов, можно переименовать как угодно
+  # db:  - название конкретного сервиса, можно переименовать как угодно
   db:
-    # image:   - указывам какой образ мы будем стягивать
+    # image:   - указывам какой образ мы будем стягивать в этот сервис
     image: mariadb:10.3
-    # restart:   - настройка перезапускающая образ если он остановлен изза ошбки (always - перезапускает, no - не перезапускает)
+    # restart:   - настройка перезапуска образа если он остановлен изза ошбки (always - перезапускает, no - не перезапускает)
     restart: always
     # environment:   - различные настройки, переменные, значения, что понадобятся для работы с образом, например логин и пароль для входа
     environment:
-      MYSQL_ROOT_PASSWORD: notSecureChangeMe  # MYSQL_ROOT_PASSWORD: собственно настройка пароля(по умолчанию notSecureChangeMe можно/нужно изменить)
+      MYSQL_ROOT_PASSWORD: notSecureChangeMe  # MYSQL_ROOT_PASSWORD: настройка пароля(по умолчанию notSecureChangeMe можно/нужно изменить)
 
   # phpmyadmin: - названиt другого конкретного образа/сервиса, можно переименовать как угодно
   phpmyadmin:
