--- a/docker/files/docker-compose(volumes).yml
+++ b/docker/files/docker-compose(volumes).yml
@@ -1,34 +1,36 @@
-#                                           Docker Volumes / Тома докер
-
 version: '3'
 
 services:
-  # сервис который у нас будет работать с питоном и джанга (и устанавливать их)
+  # сервис который у нас будет работать с Питоном и Джанга (и устанавливать их)
   django:
+    # путь к докерфаилу с описанием образа (Питон с библиотекой Джанга)
     build: ./
-    # необязательная команда устанавливает название для контейнера
+    # необязательная команда устанавливает название для контейнера(мб сервиса?? почему она в каждос сервисе??)
     container_name: django
-    # дополнительная команда
-    comand: python manage.py runserver 0.0.0.0:8000     # тут для запуска локального сервера (в Джанга есть предустановленный мы его сразу будем запускать). manage.py - спец фаил к которому мы обращаемся через Питон и вызываем команду(тут runserver) 0.0.0.0 - локалхост
-    # Указываем тома за счет которых мы сможем соединить папку с хостмашины(сервера) с указанной нами папкой(тут текущей)
+    # дополнительная команда, чтобы запустить локальный веб сервер
+    comand: python manage.py runserver 0.0.0.0:8000 # тут для запуска локального сервера (в Джанга есть предустановленный) manage.py - спец фаил к которому мы обращаемся через Питон и вызываем команду runserver 0.0.0.0 - локалхост
+
+    # Указываем тома, за счет которых мы сможем соединить папку с хостмашины(сервера) с указанной нами папкой(тут текущей)
     volumes:
       - .:/usr/src/app      # связываем текущую папку с папкой которая прописана в WORKDIR(рабочая директория с хост машины которая будет находиться в контейнере). без этой нстройки не создастся фаил manage.py и другие
     ports:
       - "8000:8000"
-    # Описание зависимостей
-    depends_on:             # говорит о том что наш сервис (тут django) вступит в зависимость(можем через него обращаться) с другим нашим сервисом (тут pgdb)
-      - pgdb
+    # depends_on устанавливает последовательность загрузки контейнеров. (тут: сначала запустится сервис pgdb, потом django)
+    depends_on:
+      - pgdb # говорит о том что наш сервис (тут django) вступит в зависимость(можем через него обращаться) с другим нашим сервисом, описанным в эом же docker-compose (тут pgdb) Важно что сервис django зависит от сервиса pgbd, а не наоборот. Именно это гарантирует что контейнер с базой данных будет запущен перед контейнером приложения
 
-  # Сервис с БД для контейнера (PostgreSQL)
+  # Сервис с БД PostgreSQL
   pgdb:
-    image:                                              # Тк для сервиса pgdb мы не делали докерфаил, то описываем все настройки тут(есть в докерхабе)
+    # Тк для сервиса pgdb мы не делали докерфаил, то описываем(копируем в докерхабе) все настройки тут
+    image: postgres
     environment:
+      # Переменные, которые нужны для подключения к БД
       - POSTGRES_DB=postgres         # переменная названия образа(название после знака равно)
       - POSTGRES_USER=postgres			 # задаем логин
       - POSTGRES_PASSWORD=postgres   # задаем пароль
     container_name: pgdb
     volumes:
-      - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata.
+      - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути /var/lib/postgresql/data/ на хост машине. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata. Например наша БД с супераользователем сохранится тут и не исчесзнет если остановить контейнер (docker-compose down) и потом запустить его заново
 
 # чтобы все коррктно работало необходимо в самом конце добавить еще одну настройку - volumes указывающее на папку(тут pgdbdata)
 volumes:
