--- a/docker/files/composefiles/docker-compose(volumes).yml
+++ b/docker/files/composefiles/docker-compose(volumes).yml
@@ -1,18 +1,22 @@
 version: '3'
 
+# Определяем какие у нас будут volumes, если их не существует то Докер их создаст
+volumes:
+  pgdbdata:        # определяем что должна быть общая папка (volume) pgdbdata
+
+
 services:
   # сервис который у нас будет работать с Питоном и Джанга (и устанавливать их)
   django:
-    # путь к докерфаилу с описанием образа (Питон с библиотекой Джанга)
-    build: ./
-    # необязательная команда устанавливает название для контейнера(мб сервиса?? почему она в каждос сервисе??)
+    build: ./ # соберем образ тут Питон с библиотекой Джанга на основе докерфаила из директории "./"
+    # необязательная команда устанавливает название для контейнера(мб сервиса?? почему она в каждом сервисе??)
     container_name: django
     # дополнительная команда, чтобы запустить локальный веб сервер
     comand: python manage.py runserver 0.0.0.0:8000 # тут для запуска локального сервера (в Джанга есть предустановленный) manage.py - спец фаил к которому мы обращаемся через Питон и вызываем команду runserver 0.0.0.0 - локалхост
 
-    # Указываем тома, за счет которых мы сможем соединить папку с хостмашины(сервера) с указанной нами папкой(тут текущей)
+    # volumes - указываем какие тома мы хотим примонтировать к этому контейнеру
     volumes:
-      - .:/usr/src/app      # связываем текущую папку с папкой которая прописана в WORKDIR(рабочая директория с хост машины которая будет находиться в контейнере). без этой нстройки не создастся фаил manage.py и другие
+      - .:/usr/src/app # монтируем текущую папку с папкой /usr/src/app, которая прописана в WORKDIR(рабочая директория которая будет находиться в контейнере)
     ports:
       - "8000:8000"
     # depends_on устанавливает последовательность загрузки контейнеров. (тут: сначала запустится сервис pgdb, потом django)
@@ -32,10 +36,7 @@ services:
     volumes:
       - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути /var/lib/postgresql/data/ на хост машине. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata. Например наша БД с супераользователем сохранится тут и не исчесзнет если остановить контейнер (docker-compose down) и потом запустить его заново
 
-# чтобы все коррктно работало необходимо в самом конце добавить еще одну настройку - volumes указывающее на папку(тут pgdbdata)
-volumes:
-  pgdbdata:           # тут мы задаем что эта папка будет существовать
-# тоесть при помощи томов мы можем указваать папки нашего проекта связанные с папками на хостмашине и все данные будут сохранены и теперь после остановки проекта ничего не будет утеряно
+
 
 
 
