--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -1,22 +1,22 @@
-version: '3.1'
+version: '3.1' # версия ??докеркомпоста??
 
-# services - все сервисы с образами и настройками, которые будут подключены
+# services - все сервисы с образами и настройками, которые будут развернуты. Каждый сервис имеет свой контейнер и все эти контейнеры имеют друг в друга доступ
 services:
   # db:  - название конкретного сервиса, можно переименовать как угодно
   db:
     # image:   - указывам какой образ мы будем стягивать в этот сервис
     image: mariadb:10.3
-    # restart:   - настройка перезапуска образа если он остановлен изза ошбки (always - перезапускает, no - не перезапускает)
+    # restart:   - настройка перезапуска образа если он остановлен (?изза ошбки? и если перезапустить виртуальную машмину, то после рестарта Докер запустит все эти контейнеры ??) (always - перезапускает, no - не перезапускает)
     restart: always
-    # environment:   - различные настройки, переменные, значения, что понадобятся для работы с образом, например логин и пароль для входа
+    # environment:   - различные настройки, переменные среды, значения, что понадобятся, например логин и пароль для входа
     environment:
-      MYSQL_ROOT_PASSWORD: notSecureChangeMe  # MYSQL_ROOT_PASSWORD: настройка пароля(по умолчанию notSecureChangeMe можно/нужно изменить)
+      MYSQL_ROOT_PASSWORD: notSecureChangeMe  # MYSQL_ROOT_PASSWORD: настройка пароля
 
   # phpmyadmin: - названиt другого конкретного образа/сервиса, можно переименовать как угодно
   phpmyadmin:
     image: phpmyadmin
     restart: always
-    # ports: - характеристика указывающая порты, если они нужны
+    # ports: - характеристика указывающая порты, при помощи которых этот контейнер свяжется "наружу"
     ports:
       - 8080:80
     environment:
