--- a/docker/files/composefiles/docker-compose(mod).yml
+++ b/docker/files/composefiles/docker-compose(mod).yml
@@ -6,7 +6,7 @@ services:
   db:
     # image: mysql - просто меняем на mysql значение характеристики image
     image: mysql
-    # Добавим command с плагигном аворизации
+    # Добавим command с плагигном авторизации
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
@@ -16,15 +16,20 @@ services:
     image: phpmyadmin
     restart: always
     ports:
-      - 8080:80  # а по этому графический интерфейс майскуэл
+      - 8080:80  # порты для графического интерфейса майскуэл
     environment:
       - PMA_ARBITRARY=1
 
-  # Добавим новый сервис, используем уже готовый Dockerfile для того чтобы подключить в сервис образ из него со всеми настройками
+  # Добавим новый сервис, используем уже готовый Dockerfile для того, чтобы подключить в сервис образ из него со всеми настройками
   php:
-    build: ./php  # указываем папку где находится наш докерфаил и команду build: для него(те этот сервис в отдельном докерфаиле)
+    # build - указывает что нужно собрать образ (тут php) на основе докерфаила, находящегося по ?относительному? адресу "./php"
+    # Чтобы сделать разные билды можно положить докерфалы в разные папки, что логично, тк это могут быть и отдельные сервисы(подпроекты) и в коде
+    build: ./php  # указываем папку где находится наш докерфаил
     ports:
-      - 8081:80   # укажем другой порт локального сервера(8081 вместо 8080) чтобы не было конфликтов с phpmyadmin, теперь по этому локалхосту у нас будет пхп фаил
+      - 8081:80   # укажем другой порт локального сервера(8081 вместо 8080) чтобы не было конфликтов с phpmyadmin
+
+
+
 
 
 
