--- a/docker/files/composefiles/docker-compose(volumes).yml
+++ b/docker/files/composefiles/docker-compose(volumes).yml
@@ -6,17 +6,16 @@ volumes:
 
 
 services:
-  # сервис который у нас будет работать с Питоном и Джанга (и устанавливать их)
+  # сервис который будет работать с Питоном и Джанга (и устанавливать их)
   django:
-    build: ./ # соберем образ тут Питон с библиотекой Джанга на основе докерфаила из директории "./"
-    # необязательная команда устанавливает название для контейнера(мб сервиса?? почему она в каждом сервисе??)
+    build: ./ # соберем образ Питона с библиотекой Джанга на основе докерфаила из директории "./"
+    # необязательная команда устанавливает название для контейнера
     container_name: django
-    # дополнительная команда, чтобы запустить локальный веб сервер
-    comand: python manage.py runserver 0.0.0.0:8000 # тут для запуска локального сервера (в Джанга есть предустановленный) manage.py - спец фаил к которому мы обращаемся через Питон и вызываем команду runserver 0.0.0.0 - локалхост
+    comand: python manage.py runserver 0.0.0.0:8000 # тут для запуска локального веб сервера (в Джанга есть предустановленный) manage.py - спец фаил к которому мы обращаемся через Питон и вызываем команду runserver 0.0.0.0 - локалхост
 
     # volumes - указываем какие тома мы хотим примонтировать к этому контейнеру
     volumes:
-      - .:/usr/src/app # монтируем текущую папку с папкой /usr/src/app, которая прописана в WORKDIR(рабочая директория которая будет находиться в контейнере)
+      - .:/usr/src/app # монтируем текущую папку "." с папкой "/usr/src/app", которая прописана в WORKDIR(рабочая директория которая будет находиться в контейнере)
     ports:
       - "8000:8000"
     # depends_on устанавливает последовательность загрузки контейнеров. (тут: сначала запустится сервис pgdb, потом django)
@@ -34,7 +33,7 @@ services:
       - POSTGRES_PASSWORD=postgres   # задаем пароль
     container_name: pgdb
     volumes:
-      - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути /var/lib/postgresql/data/ на хост машине. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata. Например наша БД с супераользователем сохранится тут и не исчесзнет если остановить контейнер (docker-compose down) и потом запустить его заново
+      - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути "/var/lib/postgresql/data/" на хост машине. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata. Например наша БД с супераользователем сохранится тут и не исчесзнет если остановить контейнер (docker-compose down) и потом запустить его заново
 
 
 
