--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3.1' # версия ??докеркомпоста??
 
 # services - все сервисы с образами и настройками, которые будут развернуты. Каждый сервис имеет свой контейнер и все эти контейнеры имеют друг в друга доступ
 services:
-  # db:  - название конкретного сервиса, можно переименовать как угодно
+  # db:  - название конкретного сервиса (можно переименовать как угодно)
   db:
     # image:   - указывам какой образ мы будем стягивать в этот сервис
     image: mariadb:10.3
-    # restart:   - настройка перезапуска образа если он остановлен (?изза ошбки? и если перезапустить виртуальную машмину, то после рестарта Докер запустит все эти контейнеры ??) (always - перезапускает, no - не перезапускает)
+    # restart:   - настройка перезапуска образа если он остановлен (?изза ошбки? и если перезапустить виртуальную машину, то после рестарта Докер запустит все эти контейнеры ??) (always - перезапускает, no - не перезапускает)
     restart: always
     # environment:   - различные настройки, переменные среды, значения, что понадобятся, например логин и пароль для входа
     environment:
-      MYSQL_ROOT_PASSWORD: notSecureChangeMe  # MYSQL_ROOT_PASSWORD: настройка пароля
+      MYSQL_ROOT_PASSWORD: notSecureChangeMe  # задание пароля для MYSQL
 
   # phpmyadmin: - названиt другого конкретного образа/сервиса, можно переименовать как угодно
   phpmyadmin:
@@ -18,9 +18,9 @@ services:
     restart: always
     # ports: - характеристика указывающая порты, при помощи которых этот контейнер свяжется "наружу"
     ports:
-      - 8080:80
+      - 8080:80   # порты для графического интерфейса
     environment:
-      - PMA_ARBITRARY=1  # Некая стандартная настройка по умолчанию для phpmyadmin
+      - PMA_ARBITRARY=1
 
 
 
