--- a/docker/files/composefiles/docker-compose(mod).yml
+++ b/docker/files/composefiles/docker-compose(mod).yml
@@ -2,12 +2,12 @@ version: '3.1'
 
 services:
 
-  # Модифицируем этот сервис (можно просто скопировать с докерхаба)
+  # Модифицируем этот сервис (можно просто скопировать с образа mysql из докерхаба)
   db:
     # image: mysql - просто меняем на mysql значение характеристики image
     image: mysql
-    # Добавим command с плагигном авторизации
-    command: --default-authentication-plugin=mysql_native_password
+    # comand  - аналог CMD из докерфаила, прописываем команды, что исполняются при каждом запуске
+    command: --default-authentication-plugin=mysql_native_password  # плагигн авторизации
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 12345abc99- # мможно поменять и пароль и любые другие данные
@@ -16,17 +16,17 @@ services:
     image: phpmyadmin
     restart: always
     ports:
-      - 8080:80  # порты для графического интерфейса майскуэл
+      - 8080:80
     environment:
       - PMA_ARBITRARY=1
 
   # Добавим новый сервис, используем уже готовый Dockerfile для того, чтобы подключить в сервис образ из него со всеми настройками
   php:
-    # build - указывает что нужно собрать образ (тут php) на основе докерфаила, находящегося по ?относительному? адресу "./php"
-    # Чтобы сделать разные билды можно положить докерфалы в разные папки, что логично, тк это могут быть и отдельные сервисы(подпроекты) и в коде
-    build: ./php  # указываем папку где находится наш докерфаил
+    # build - указывает что нужно собрать образ на основе Dockerfile, находящегося по относительному адресу (тут "./php")
+    # Чтобы сделать другие билды в этом docker-compose фаиле, можно положить докерфалы в папки разных проектов, тк это могут быть и отдельные сервисы(подпроекты) и в коде
+    build: ./php  # указываем папку где находится наш Dockerfile
     ports:
-      - 8081:80   # укажем другой порт локального сервера(8081 вместо 8080) чтобы не было конфликтов с phpmyadmin
+      - 8081:80   # укажем другой порт для локального сервера(8081 вместо 8080) чтобы не было конфликтов с phpmyadmin
 
 
 
