--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1' # версия ??докеркомпоста??
+version: '3.1' # (!! устаревшее свойство, больше не используется, теперь без этого свойства компост сам выбирает самую последнюю схему)
 
 # services - все сервисы с образами и настройками, которые будут развернуты. Каждый сервис имеет свой контейнер и все эти контейнеры имеют друг в друга доступ
 services:
