--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   phpmyadmin:
     image: phpmyadmin
     restart: always
-    # ports: - характеристика указывающая порты, при помощи которых этот контейнер свяжется "наружу"
+    # ports: - характеристика указывающая порты, при помощи которых этот контейнер свяжется "наружу" (HOST:CONTAINER)
     ports:
       - 8080:80   # порты для графического интерфейса
     environment:
