--- a/docker/files/rails/Dockerfile
+++ b/docker/files/rails/Dockerfile
@@ -4,7 +4,7 @@ FROM ruby:3.2
 # Устанавливаем зависимости для работы с Rails (Node.js)
 RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 
-# Устанавливаем зависимые библиотеки
+# Устанавливаем зависимые библиотеки (нах не надо ??)
 RUN gem install bundler
 
 # Устанавливаем рабочую директорию
@@ -19,7 +19,7 @@ RUN bundle install
 # Копируем все файлы приложения
 COPY . .
 
-# Прокладываем порт, который будет использоваться
+# Прокладываем порт, который будет использоваться, на котором будет работать приложение
 EXPOSE 3000
 
 # Команда для запуска приложения
