--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1' # (!! устаревшее свойство, больше не и
 
 # services - все сервисы с образами и настройками, которые будут развернуты. Каждый сервис имеет свой контейнер и все эти контейнеры имеют друг в друга доступ
 services:
-  # db:  - название конкретного сервиса (можно переименовать как угодно)
+  # db:  - название конкретного сервиса (можно выбирать любые названия)
   db:
     # image:   - указывам какой образ мы будем стягивать в этот сервис
     image: mariadb:10.3
@@ -12,13 +12,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: notSecureChangeMe  # задание пароля для MYSQL
 
-  # phpmyadmin: - названиt другого конкретного образа/сервиса, можно переименовать как угодно
+  # phpmyadmin: - название другого сервиса (графического интерфейс для баз данных)
   phpmyadmin:
     image: phpmyadmin
     restart: always
     # ports: - характеристика указывающая порты, при помощи которых этот контейнер свяжется "наружу" (HOST:CONTAINER)
     ports:
-      - 8080:80   # порты для графического интерфейса
+      - 8080:80
     environment:
       - PMA_ARBITRARY=1
 
