--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   # pgdb:  - название конкретного сервиса (можно выбирать любые названия) с СУБД PostgreSQL
   pgdb:
-    # image:   - указывам какой образ мы будем стягивать  в этот сервис (скачает из Докерхаба, если его нет локально), все остальные настройки можно скопировать в докерхабе
+    # image:   - указывам какой образ мы будем стягивать в этот сервис (скачает из Докерхаба, если его нет локально), все остальные настройки можно скопировать в докерхабе
     image: postgres
     # comand  - аналог CMD из докерфаила, прописываем команды, что исполняются при каждом запуске
     command: --default-authentication-plugin=mysql_native_password  # плагигн авторизации от mysql, просто для примера
@@ -30,7 +30,7 @@ services:
     restart: always
     # volumes - указываем какие тома мы хотим примонтировать к этому контейнеру
     volumes:
-      - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути "/var/lib/postgresql/data/" на хост машине. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata. Например наша БД с супераользователем сохранится тут и не исчесзнет если остановить контейнер (docker-compose down) и потом запустить его заново
+      - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути "/var/lib/postgresql/data/" на хост машине. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata
 
   # phpmyadmin: - название другого сервиса (графического интерфейс для баз данных)
   phpmyadmin:
@@ -44,18 +44,15 @@ services:
 
   # Добавим новый сервис (с Питоном и Джанго), используем уже готовый Dockerfile для того, чтобы подключить в сервис образ из него со всеми настройками
   django:
-    # build - указывает что нужно собрать образ на основе Dockerfile, находящегося по относительному адресу (тут "./")
-    # Чтобы сделать другие билды в этом docker-compose фаиле, можно положить докерфалы в папки разных проектов, тк это могут быть и отдельные сервисы(подпроекты) и в коде
+    # build - указывает что нужно собрать образ на основе Dockerfile, находящегося по относительному адресу
     build: ./ # указываем папку где находится Dockerfile, относительно docker-compose.yml
     container_name: django
-    comand: python manage.py runserver 0.0.0.0:8081 # тут для запуска локального веб сервера (в Джанга есть предустановленный) manage.py - спец фаил к которому мы обращаемся через Питон и вызываем команду runserver 0.0.0.0 - локалхост
-
-    # volumes - указываем какие тома мы хотим примонтировать к этому контейнеру
+    command: python manage.py runserver 0.0.0.0:8081 # запуск веб сервера Джанга
     volumes:
       - .:/usr/src/app # монтируем текущую папку "." с папкой "/usr/src/app", которая прописана в WORKDIR(рабочая директория которая будет находиться в контейнере)
     ports:
       - "8081:80"  # укажем другой порт для локального сервера(8081 вместо 8080) чтобы не было конфликтов с phpmyadmin
-    # depends_on - устанавливает последовательность загрузки контейнеров. (тут: сначала запустится сервис pgdb, потом django)
+    # depends_on - устанавливает последовательность запуска контейнеров. (тут: сначала запустится сервис pgdb, потом django)
     depends_on:
       - pgdb # говорит о том что наш сервис (тут django) вступит в зависимость(можем через него обращаться) с другим нашим сервисом, описанным в эом же docker-compose (тут pgdb) Важно что сервис django зависит от сервиса pgbd, а не наоборот. Именно это гарантирует что контейнер с базой данных будет запущен перед контейнером приложения
 
