--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -1,36 +1,63 @@
-version: '3.1' # (!! устаревшее свойство, больше не используется, теперь без этого свойства компост сам выбирает самую последнюю схему)
+version: '3.1' # (!! Свойство v1, устарло и больше не используется. Компост v2 сам выбирает самую последнюю схему)
 
 
-# Определяем какие у нас будут volumes, если их не существует то Докер их создаст
+# Определяем(создаем?) какие у нас будут volumes, если их не существует то Докер их создаст. Указываем тут тотлько Named Volumes (?? Или и анонимные тоже ??), Host Volume тут указывать не нужно
 volumes:
-  pgdbdata:        # определяем что должна быть общая папка (volume) pgdbdata
+  pgdbdata: # определяем Named Volume директорию pgdbdata
 
 
-# services - все сервисы с образами и настройками, которые будут развернуты. Каждый сервис имеет свой контейнер и все эти контейнеры имеют друг в друга доступ
+# networks: - создает сети докера, чтобы подключить в них контейнеры в описаниях сервисов в этом фаиле
+networks:
+  # Описываем все сети что будут созданы
+  internet:          # ? имя сети для использования в этом docker-compose в сервисах
+    driver: bridge   # тип сети
+    name: internet   # ? имя сети для Докера (! Потом назвать по разному и проверить !)
+  appnet:
+    driver: bridge
+    name: appnet
+
+
+# services - раздел со всеми сервисами, которые содержат описания контейнеров. Каждый сервис на базе обаза создает (и запускает) свой контейнер и все эти контейнеры имеют друг в друга доступ
 services:
 
   # pgdb:  - название конкретного сервиса (можно выбирать любые названия) с СУБД PostgreSQL
   pgdb:
-    # image:   - указывам какой образ мы будем стягивать в этот сервис (скачает из Докерхаба, если его нет локально), все остальные настройки можно скопировать в докерхабе
-    image: postgres
-    # comand  - аналог CMD из докерфаила, прописываем команды, что исполняются при каждом запуске
-    command: --default-authentication-plugin=mysql_native_password  # плагигн авторизации от mysql, просто для примера
-    # environment:   - различные настройки, переменные среды, значения, что понадобятся, например логин и пароль для входа
-    environment:
+
+    # image:   - указывает образ на котором будет основан контейнер этого сервиса (скачает из Докерхаба, если его нет локально)
+    image: postgres   # (имя образа, что обычно указывали в стандартной команде "run" в конце)
+
+    # container_name - необязательная команда устанавливает название для контейнера, который будет создан на основе инструкций этого сервиса, без нее сгенерит название от имени сервиса
+    container_name: postgresdb # (аналог параметра "--name" в обычной команде "run")
+
+    # comand  - аналог CMD из Dockerfile, для команды, что исполняются при каждом запуске
+    command: --default-authentication-plugin=mysql_native_password  # плагин авторизации от mysql, просто для примера
+
+    # environment:   - переменные среды (например логин и пароль для входа)
+    environment: # (аналог параметра "-e" в обычной команде "run")
       # Можно писать 2мя способами (??хз зачем??)
       # Вариант 1
-      MYSQL_ROOT_PASSWORD: 12345abc99-  # задание пароля для MYSQL (просто для примера)
+      POSTGRES_PASSWORD: 12345abc99-
       # Вариант 2 (Переменные, которые нужны для подключения к БД)
       - POSTGRES_DB=postgres         # переменная названия образа(название после знака равно)
       - POSTGRES_USER=postgres			 # задаем логин
       - POSTGRES_PASSWORD=postgres   # задаем пароль
-    # container_name - необязательная команда устанавливает название для контейнера
-    container_name: pgdb
-    # restart:   - настройка перезапуска образа если он остановлен (?изза ошбки? и если перезапустить виртуальную машину, то после рестарта Докер запустит все эти контейнеры ??) (always - перезапускает, no - не перезапускает)
+
+    # restart:   - настройка перезапуска контейнера если он остановлен, перезапущен сервер итд
     restart: always
-    # volumes - указываем какие тома мы хотим примонтировать к этому контейнеру
-    volumes:
-      - pgdbdata:/var/lib/postgresql/data/   # создастся папка pgdbdata в рабочей папке проекта и соединяем ее с папкой на сервере по стандартному пути "/var/lib/postgresql/data/" на хост машине. Это прописывает, что все значения будут храниться на хостмашине и будут связанны с нашей папкой pgdbdata
+    # always         - перезапускает
+    # no             - не перезапускает
+    # unless-stopped - после перезагрузки сервера контейнер будет иметь тоже состояние(?включен/выключен или что??), что и до перезагрузки
+    # on-failure
+
+    # volumes: - указываем какие тома мы хотим примонтировать к этому контейнеру (можно указать множество томов)
+    volumes: # (аналог параметра "-v" в обычной команде "run")
+      - pgdbdata:/var/lib/postgresql/data/   # Named Volume
+      - /opt/web/pics:/war/www/pictures      # Host Volume   (директории и на хост машине создадутся автоматически)
+
+    # networcks: - указываем к какой сети будет подключен контейнер этого сервиса (?? Если не указать networks: то контейнер будет подключен к сети по умолчанию ??)
+    networcks:
+      - appnet
+
 
   # phpmyadmin: - название другого сервиса (графического интерфейс для баз данных)
   phpmyadmin:
@@ -38,23 +65,43 @@ services:
     restart: always
     # ports: - характеристика указывающая порты, при помощи которых этот контейнер свяжется "наружу" (HOST:CONTAINER)
     ports:
-      - 8080:80
+      - 8080:80 # (аналог параметра "-p 8080:80" в обычной команде "run")
+      - "443:443"
     environment:
       - PMA_ARBITRARY=1
 
-  # Добавим новый сервис (с Питоном и Джанго), используем уже готовый Dockerfile для того, чтобы подключить в сервис образ из него со всеми настройками
+
+  # django: сервис с Питоном, Джанго и кодом приложения, использует Dockerfile, чтобы собрать образ для контейнера этого сервиса
   django:
-    # build - указывает что нужно собрать образ на основе Dockerfile, находящегося по относительному адресу
-    build: ./ # указываем папку где находится Dockerfile, относительно docker-compose.yml
+
+    # build: - указывает что нужно собрать образ на основе Dockerfile, находящегося по адресу относительному docker-compose.yml
+    build: ./ # собирае от Dockerfile(Python+Django) из текущей директории
+
     container_name: django
     command: python manage.py runserver 0.0.0.0:8081 # запуск веб сервера Джанга
     volumes:
       - .:/usr/src/app # монтируем текущую папку "." с папкой "/usr/src/app", которая прописана в WORKDIR(рабочая директория которая будет находиться в контейнере)
     ports:
       - "8081:80"  # укажем другой порт для локального сервера(8081 вместо 8080) чтобы не было конфликтов с phpmyadmin
-    # depends_on - устанавливает последовательность запуска контейнеров. (тут: сначала запустится сервис pgdb, потом django)
+
+    # depends_on - устанавливает зависимость, тоесть этот контейнер этого сервиса будет собран (включая сборку образа) и запустиится только после укаказанных в параметрах сервисов
     depends_on:
-      - pgdb # говорит о том что наш сервис (тут django) вступит в зависимость(можем через него обращаться) с другим нашим сервисом, описанным в эом же docker-compose (тут pgdb) Важно что сервис django зависит от сервиса pgbd, а не наоборот. Именно это гарантирует что контейнер с базой данных будет запущен перед контейнером приложения
+      - pgdb # сервис django зависит от сервиса pgbd, торесть контейнер с БД будет запущен перед контейнером django-приложения
+      - app-redis
+
+    # Кнтейнер этого сервиса будет подключен к 2м сетям (назвем их внуренняя(бекенд) - доступная только контейнерам и внешняя(фронтенд) - доступная через веб для пользователей к которой мы будем перебрасывать порты), в то время как контейнеры баз данных будут подключены только к одной внутренней сети
+    networcks:
+      - internet # внешняя(фронтенд)
+      - appnet   # внуренняя(бекенд)
+
+
+    # app-redis: - сервис с БД Редис, для кеша
+    app-redis:
+      image: redis
+      container_name: app_redis
+      restart: unless-stopped
+      networcks:
+        - appnet
 
 
 
