--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -104,6 +104,14 @@ services:
         - appnet
 
 
+    # сервис для примера подключения контейнера к хост сети, тут не нужно подключать порты
+    my_service:
+      image: nginx:latest
+      network_mode: host  # подключение к сети хоста, ее не нужно создавать в networks:, тк существует по умолчанию
+      volumes:
+        - ./html:/usr/share/nginx/html  # подключение локальной папки с HTML-страницами
+
+
 
 
 
