--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
   pgdbdata: # определяем Named Volume директорию pgdbdata
 
 
-# networks: - создает сети докера, чтобы подключить в них контейнеры в описаниях сервисов в этом фаиле
+# networks: - создает сети докера, чтобы подключить в них контейнеры в описаниях сервисов в этом фаиле. Если тут не создавать сети то создаст именованную(от имени сервиса) bridge-сеть в которую поместит все контейнеры
 networks:
   # Описываем все сети что будут созданы
   internet:          # ? имя сети для использования в этом docker-compose в сервисах
@@ -110,6 +110,16 @@ services:
       network_mode: host  # подключение к сети хоста, ее не нужно создавать в networks:, тк существует по умолчанию
       volumes:
         - ./html:/usr/share/nginx/html  # подключение локальной папки с HTML-страницами
+
+
+
+    # сервис для примера запуска Ruby-программы с выводом в терминал и возможностью ввода данных через `gets`
+    ruby-app:
+      build: .
+      # флаги `stdin_open: true` и `tty: true` позволяют взаимодействовать с приложением в терминале, используя стандартный ввод и вывод. По умолчанию Docker использует стандартный ввод (stdin) для контейнеров, но если вы делаете какие-то долгосрочные задачи или последовательные вводы, вам может быть нужно использовать `docker exec` для подключения к работающему контейнеру
+      stdin_open: true  # Позволяет открытый стандартный ввод
+      tty: true         # Эмулирует терминал
+
 
 
 
