--- a/docker/files/composefiles/docker-compose.yml
+++ b/docker/files/composefiles/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1' # (!! Свойство v1, устарло и больше не используется. Компост v2 сам выбирает самую последнюю схему)
 
 
-# Определяем(создаем?) какие у нас будут volumes, если их не существует то Докер их создаст. Указываем тут тотлько Named Volumes (?? Или и анонимные тоже ??), Host Volume тут указывать не нужно
+# volumes: - определяем какие у в этом проекте будут volumes, если их не существует то Докер их создаст. Указываем тут тотлько Named Volumes (?? Или и анонимные тоже ??), Host Volume тут указывать не нужно
 volumes:
   pgdbdata: # определяем Named Volume директорию pgdbdata
 
@@ -17,7 +17,7 @@ networks:
     name: appnet
 
 
-# services - раздел со всеми сервисами, которые содержат описания контейнеров. Каждый сервис на базе обаза создает (и запускает) свой контейнер и все эти контейнеры имеют друг в друга доступ
+# services - раздел со всеми сервисами, которые содержат описания контейнеров. Каждый сервис на базе обаза создает (и запускает) свой контейнер
 services:
 
   # pgdb:  - название конкретного сервиса (можно выбирать любые названия) с СУБД PostgreSQL
@@ -110,7 +110,6 @@ services:
       network_mode: host  # подключение к сети хоста, ее не нужно создавать в networks:, тк существует по умолчанию
       volumes:
         - ./html:/usr/share/nginx/html  # подключение локальной папки с HTML-страницами
-
 
 
     # сервис для примера запуска Ruby-программы с выводом в терминал и возможностью ввода данных через `gets`
